--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "nodemailer": "^4.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.12"
   }
 }
