--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-"SENDGRID_USERNAME": "user name",
-"SENDGRID_PASSWORD": "password"
+"SENDGRID_USERNAME": "app87538554@heroku.com",
+"SENDGRID_PASSWORD": "o1wvp7fo6497"
 }
