--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Tutorial for setting up nodemailer in heroku with sendrid.",
   "main": "server.js",
   "scripts": {
-    "test": "nodemon",
-    "start": "nodemon"
+    "test": "node server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
